Deserialize and document passed data
