# routes/b2bOrder.js
@@ -1,13 +1,16 @@
 const utils = require('../lib/utils')
 const challenges = require('../data/datacache').challenges
+var serialize = require('serialize-to-js')
 
 exports = module.exports = function b2bOrder () {
   return (req, res) => {
-    // TODO Implement deserialization of JSON request body
-    // TODO Verify if "dir" or "ls" have been spawned on the server
-    if (utils.notSolved(challenges.rceChallenge)) {
-      utils.solve(challenges.rceChallenge)
-    }
+    const orderLines = req.body.orderLinesData
+    orderLines.forEach(orderLine => {
+      console.log(serialize.deserialize(orderLine))
+      if (utils.notSolved(challenges.rceChallenge)) { // TODO Verify if "dir" or "ls" have been spawned on the server
+        utils.solve(challenges.rceChallenge)
+      }
+    })
     res.end()
   }
 }
